

changelog of master-branch
    - changed TextureAtlas-block-addition system to be based on mod-based/texture size-based atlases
    - new blocks: furnace with inventory & crafting, barrel, ice variants, bone block, book shelf, coral blocks,
                  pumpkin, carved pumpkin, melon, clay, coarse dirt, prismarin blocks, dried kelp block, end stones,
                  glowstone, magma block, mossy stone bricks, nether bricks, nether wart block, netherrack
    - added key "E" to close various inventories
    - Block-class has now an CUSTOM_WALING_SPEED_MULTIPLIER-attribute used for custom waling speeds ontop of blocks
    fixed bugs:
        - game crashes when using "/tp <position>"-command
        - debug world doesn't use the state definition correctly
        - can't get items out of an tag-handled slot
        - cobblestone was not arrival

changelog of snapshot 20w07a [released on 10.02.2020]
    based on: rendering update branch 1 & changes to master-branch
    - block textures are now cut out to squares making animated textures load only the first texture, but not the whole
    - inventory config has now an option to offset the background
    - ResourceLocator.add_resources_by_modname's directory parameter is now optional
    - added config for USE_MISSING_TEXTURES_ON_MISS_TEXTURE
    - ResourceLocator.add_resources_by_modname will now also load tags
    - added new blocks: brick slab, glass, stained glass, carpets, sandstone
    - rendering support for "uv" coordinates
    - TextureAtlas will now resize automatically to new size if needed
    - added grass <-> dirt convert
    - log contains now some os-specific information
    - changes the way how html characters are escaped
    - added some memory & cpu usage information
    - added hot-keys: F3+A, F3+C, F3+C for 10s, F3+D, F3+I, F3+N and F3+T
    - changed the way how block faces are stored
    - removed custom block renderers for the moment
    - crashes on mod bus do not crash the game any more