@@ -779,5 +779,6 @@ started these clone on 12th of July, 2019
 [uuk]: added bone block, bookshelf, coral blocks (with dead variants)
 [uuk]: added option to TickHandler to enable/disable random ticks [used in BlockItemGenerator]
 [uuk]: added pumpkin, carved pumpkin, melon, clay, coarse dirt, prismarine blocks, dried kelp block, end stones,
-             glowstone, magma block, mossy stone bricks, nether bricks, nether wart block, netherrack
+             glowstone, magma block, mossy stone bricks, nether bricks, nether wart block, netherrack, obsidian,
+             purpur blocks, quartz slab, red nether bricks
 
